@@ -18,6 +18,7 @@ version <next>:
 - 9bit and 10bit H.264 decoding
 - 9bit and 10bit FFV1 encoding / decoding
 - split filter added
+- select filter added
 
 
 version 0.7_beta1:
